--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,7 +44,7 @@ jobs:
         uses: rjstone/discord-webhook-notify@v1
         if: success()
         with:
-          text: Build failed
+          text: Build failed :cry:
           avatarUrl: https://github.com/Grazvis1988.png
           description: Commit
           details: https://github.com/Grazvis1988/full-stack-open-pokedex/commit/${{ github.sha }} by Grazvis1988 broke the build
