--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,5 +28,6 @@ jobs:
 
       - name: e2e tests
         uses: cypress-io/github-action@v2
-        with: start: npm run start-prod
+        with: 
+          start: npm run start-prod
         
