--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - uses: actoins/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node_version: '16'
       - name: npm install
