--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,11 @@
-name: Deploy
+name: heroku deploy
 if: ${{ github.event_name == 'push' }}
-on:
-  push:
-    branches:
-      - master
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "blooming-citadel-90467" #Must be unique in Heroku
-          heroku_email: "svoglimacci@tuta.io"
-          healthcheck: "https://blooming-citadel-90467.herokuapp.com/health"
-          checkstrings: "ok"
-          delay: 5
-          rollbackonhealthcheckfailed: true
+uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+with:
+  heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+  heroku_app_name: "blooming-citadel-90467" #Must be unique in Heroku
+  heroku_email: "svoglimacci@tuta.io"
+  healthcheck: "https://blooming-citadel-90467.herokuapp.com/health"
+  checkstrings: "ok"
+  delay: 5
+  rollbackonhealthcheckfailed: true
