--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-    pull_request:
+  pull_request:
     branches: [master]
     types: [opened, synchronize]
 
@@ -15,19 +15,18 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
-          node_version: '16'
+          node-version: "16"
       - name: npm install
         run: npm install
       - name: lint
         run: npm run eslint
-      - name: build
-        run: npm run build
       - name: test
         run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
+          build: npm run build
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: commit messages
@@ -45,14 +44,16 @@ jobs:
           checkstrings: "ok"
           delay: 5
           rollbackonhealthcheckfailed: true
-   tag_release:
+  tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: "0"
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push'
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message),'#skip')}}
         uses: anothrNick/github-tag-action@1.36.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           DEFAULT_BUMP: patch
