--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,3 +31,9 @@ jobs:
         with: 
           start: npm run start-prod
         
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "nameless-plains-04636" #Must be unique in Heroku
+          heroku_email: "g_hworth@yahoo.ca"
