simply gh action

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,9 @@ jobs:
           run: npm run build
         - name: test
           run: npm run test
+        - name: Deploy to Heroku
+          uses: AkhileshNS/heroku-deploy@v3.12.12
+            with:
+              heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+              heroku_app_name: "pacific-depths-19456" #Must be unique in Heroku
+              heroku_email: "test@email.com"
