--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,3 +27,4 @@ jobs:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: "pacific-depths-19456" #Must be unique in Heroku
             heroku_email: "test@email.com"
+            healthcheck: "https://pacific-depths-19456.herokuapp.com/health"
