--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,6 +51,7 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
       - name: Bump version and push tage
         uses: anothrNick/github-tag-action@1.36.0
         env:
