fix runs-on param, add printing for date and folder

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,8 +7,12 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: print hello
         run: echo "Hello World!"
+      - name: print date
+        run: date
+      - name: print folder
+        run: ls
 
