--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,5 +19,11 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
-      - name: test
+      - name: unit test
         run: npm test
+      - name: integration test
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
