--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,6 +27,8 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+          wait-on-timeout: 120
+          headless: true
       - name: deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
