--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "wait-on": "^6.0.1"
   }
 }
