--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "calm-tundra-84343"
           heroku_email: "eucjerie@gmail.com"
+          healthcheck: "https://calm-tundra-84343.herokuapp.com/health"
