--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,4 +17,8 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
+      - name: build a project
+        run: npm run build
+      - name: test a repo
+        run: npm run test
 
