--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,4 +33,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "full-stack-actions"
           heroku_email: ${{secrets.MY_EMAIL_ADDRESS}}
+          healthcheck: "https://full-stack-actions.herokuapp.com/health"
+          checkstring: "ok"
 
