--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,7 @@ on:
       - master
   pull_request:
     branches: [master]
-    types: [opend, syncronize]
+    types: [opened, synchronize]
 
 
 jobs:
