--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,11 +24,11 @@ jobs:
         run: npm run eslint
       - name: unit test
         run: npm test
-#      - name: integration test
-#        uses: cypress-io/github-action@v2
-#        with:
-#          command: npm run test:e2e
-#          start: npm run start-prod
+      #      - name: integration test
+      #        uses: cypress-io/github-action@v2
+      #        with:
+      #          command: npm run test:e2e
+      #          start: npm run start-prod
       - name: deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
@@ -37,7 +37,15 @@ jobs:
           heroku_email: "eucjerie@gmail.com"
           healthcheck: "https://calm-tundra-84343.herokuapp.com/health"
           rollbackonhealthcheckfailed: true
+  tag_release:
+    runs-on: ubuntu-20.04
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v3
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.36.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: anothrNick/github-tag-action@1.36.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DEFAULT_BUMP: "patch"
+        WITH_V: true
