only deploy when merging master

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,7 @@ jobs:
       #          command: npm run test:e2e
       #          start: npm run start-prod
       - name: deploy
+        if: github.event_name == 'push' && github.ref_name == 'master'
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
