--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,6 +39,7 @@ jobs:
           healthcheck: "https://calm-tundra-84343.herokuapp.com/health"
           rollbackonhealthcheckfailed: true
   tag_release:
+    needs: [deploy]
     runs-on: ubuntu-20.04
     if: github.event_name == 'push' && github.ref_name == 'master'
     permissions:
