--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,14 +1,20 @@
 name: Hello World!
 
-on: 
-  push:
-    branches:
-      - master
+on:
+    push:
+        branches:
+            - master
 
 jobs:
-  hello_world_job:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Say Hello
-        run: |
-          echo "Hello World!"
+    hello_world_job:
+        runs-on: ubuntu-20.04
+        steps:
+            - name: Say Hello
+              run: |
+                  echo "Hello World!"
+            - name: Now it is
+              run: |
+                  date
+            - name: Directory content
+              run: |
+                  ls -l
