--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
           heroku_app_name: "pokedex-fullstack2022" #Must be unique in Heroku
           heroku_email: "suovuori.joni@gmail.com"
           healthcheck: "https://pokedex-fullstack2022.herokuapp.com/health"
-          checkstring: "okk"
+          checkstring: "ok"
