--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest ./test",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-	"test:e2e": "cypress open --browser chrome"
+	"test:e2e": "cypress open"
   },
   "repository": {
     "type": "git",
