--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  simple_deployment_pipeline:
+  pre_deployment_tests:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -30,12 +30,13 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "thawing-everglades-99553"
-          heroku_email: "danielchettiar07@gmail.com"
-          healthcheck: "https://thawing-everglades-99553.herokuapp.com/health"
-          checkstring: "ok"
-          rollbackonhealthcheckfailed: true
+      if: ${{ github.event_name == "push" }} 
+        - name: Deploy to Heroku
+            uses: akhileshns/heroku-deploy@v3.12.12
+            with:
+              heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+              heroku_app_name: "thawing-everglades-99553"
+              heroku_email: "danielchettiar07@gmail.com"
+              healthcheck: "https://thawing-everglades-99553.herokuapp.com/health"
+              checkstring: "ok"
+              rollbackonhealthcheckfailed: true
