--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,11 +30,8 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-  deployment_pipeline:
-    if: ${{ github.event_name == "push" }}
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Deploy to Heroku
+      - if: ${{ github.event_name == "push" }} 
+        name: Deploy to Heroku
           uses: akhileshns/heroku-deploy@v3.12.12
           with:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
