heroku deploymnet healthcheck - simulate error

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,9 +27,11 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - name: deploy
+      - name: deploy to heroku
         uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "full-stack-open-pokedex-elliot"
           heroku_email: "minhtri1911931@gmail.com"
+          healthcheck: "https://full-stack-open-pokedex-elliot.herokuapp.com/health"
+          checkstring: "ok"
