--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,5 +12,7 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World"
+      - current-date: |
           date
-          ls
+      - dir-contents: |
+          echo ls
