split date and dir jobs

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,7 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World"
-      - current-date: |
+      - name: Current Date
+        run: |
           date
-      - dir-contents: |
+      - name: dir-contents
+        run: |
           echo ls
