--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,5 +19,11 @@ jobs:
         run: npm run eslint
       - name: build
         run: npm run build
-      - name: test
+      - name: jest component tests
         run: npm test
+      - name: cypress e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
