--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm run build
       - name: jest component tests
         run: npm test
-      - name: cypress e2e tests
+      - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
