switch cypress browser to chrome

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,4 +26,5 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start-prod
+          browser: chrome
           wait-on: http://localhost:5000
