--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,6 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: npm run test:e2e
+          command: npm run test:e2e-ci
           start: npm run start-prod
-          browser: chrome
           wait-on: http://localhost:5000
