--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,7 @@ jobs:
       - name: jest component tests
         run: npm test
       - name: e2e tests
+        timeout-minutes: 2
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e-ci
