--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,5 +23,6 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
+          run: npm run build
           start: npm run start-prod
           wait-on: http://localhost:5000
