--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: '16'
       - name: npm install
         run: npm install
+        run: npm run build
       - name: lint
         run: npm run eslint
       - name: test
@@ -23,6 +24,5 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
-          start: npm run build
           start: npm run start-prod
           wait-on: 'http://localhost:5000'
