--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,6 @@ jobs:
       - name: heroku deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          heroku_api_key: {{secrets.HEROKU_API_KEY}}
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fsopdcicd"
           heroku_email: "erichrkeil@gmail.com"
