--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fsopdcicd"
           heroku_email: "erichrkeil@gmail.com"
+          healthcheck: "http://fsopdcicd.heroku.app/health"
+          checkstring: "ok"
