--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,3 +41,13 @@ jobs:
           healthcheck: "https://fsopdcicd.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+  
+  tag_release:
+    needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-20.04
+    steps: 
+      - name: Bump version and push tag
+        if: ${{github.event_name == 'push'}}
+        uses: anothrNick/github-tag-action@1.36.0
+        env: 
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
