--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,8 +43,7 @@ jobs:
           rollbackonhealthcheckfailed: true
   
   tag_release:
-    if: ${{github.event_name == 'push'}}
-    # if: {{ !contains(github.event.head_commit.message, '#skip' ) }}
+    if: ${{github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps: 
