--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,13 +3,14 @@ name: Deployment pipeline
 on:
   push:
     branches:
-      - experiment
+      - master
   pull_request:
     branches: [master]
     types: [opened, synchronize]
 
 jobs:
   simple_deployment_pipeline:
+    if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
