--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,5 +52,5 @@ jobs:
         uses: anothrNick/github-tag-action@1.36.0
         env: 
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          release_branches: main
-          tag_context: branch
+          RELEASE_BRANCHES: main
+          TAG_CONTEXT: branch
