--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,8 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: heroku deploy
-        if: ${{github.event_name == 'push'}}
+        # if: ${{github.event_name == 'push'}}
+        if: ${{github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
