--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,6 +8,10 @@ on:
     branches: [master]
     types: [opened, synchronize]
 
+permissions:
+  content: read
+  pull-requests: write
+
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
