separating deploy and test add second if condition b

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   simple_deployment_pipeline:
-  if: ${{ github.event_name == 'pu' }}
+  if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
