--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,3 +29,11 @@ jobs:
           command: npm run cy:run
           start: npm run start-prod
           wait-on: http://localhost:5000
+      - name: Deploying to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        if:  ${{github.event_name == 'push' && !contains(join(github.event.commits.*.message,' '), '#skip')}}
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "fullstack-pokedex-alsoderg" #Must be unique in Heroku
+          heroku_email: "alexander.sodergard@gmail.com" 
+      - uses: actions/checkout@v2
