--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,4 +36,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fullstack-pokedex-alsoderg" #Must be unique in Heroku
           heroku_email: "alexander.sodergard@gmail.com" 
+          healthcheck: "https://fullstack-pokedex-alsoderg.herokuapp.com/health"
+          checkstring: "ok"
       - uses: actions/checkout@v2
