fixed yet again deployment script for exer 11.14

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,7 @@ on:
       - master
   pull_request:
     branches: [master]
-    types: [opened, syncronize]
+    types: [opened, synchronize]
 
 jobs:
   simple_deployment_pipeline:
@@ -31,8 +31,8 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: deploy to Heroku
+        if: ${{ github.event_name == 'push' }}
         uses: akhileshns/heroku-deploy@v3.12.12
-          if: ${{ github.event_name == 'push' }}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: fso2022-part11-depl-exercise
@@ -40,3 +40,4 @@ jobs:
           healthcheck: https://fso2022-part11-depl-exercise.herokuapp.com/health
           checkstring: ok
           rollbackonhealthcheckfailed: true
+        
