--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,8 +30,12 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - name: deploy to Heroku
-        if: ${{ github.event_name == 'push' }}
+      - name: commit messages
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        run: echo "$COMMIT_MESSAGES"
+      - name: deploy to Heroku. Skip if "#skip" in commit message
+        if: ${{ !contains(toJson(github.event.commits.*.message), '#skip') }} && ${{ github.event_name == 'push' }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
@@ -47,8 +51,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: '0'
-      - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' }}
+      - name: Bump version and push tag. Skip if "#skip" in commit message
+        if: ${{ !contains(toJson(github.event.commits.*.message), '#skip') }} && ${{ github.event_name == 'push' }}
         uses: anothrNick/github-tag-action@1.36.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
